--- a/Services/WebStore.ServiceHosting/appsettings.json
+++ b/Services/WebStore.ServiceHosting/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConection": "Server=(localdb)\\MSSQLLocalDb;Database=WebStoreDB;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
