--- a/UI/WebStore/appsettings.json
+++ b/UI/WebStore/appsettings.json
@@ -1,7 +1,26 @@
 {
   "Logging": {
+    "Debug": {
+      "LogLevel": {
+        "Default": "Information"
+      }
+    },
+    "Console": {
+      "IncludeScopes": true,
+      "LogLevel": {
+
+        "Microsoft.AspNetCore.Mvc.Razor.Internal": "Warning",
+        "Microsoft.AspNetCore.Mvc.Razor.Razor": "Debug",
+        "Microsoft.AspNetCore.Mvc.Razor": "Error",
+
+        "Microsoft": "Error",
+        "System": "Error",
+        "Default": "Information"
+      } 
+    
+    },
     "LogLevel": {
-      "Default": "Warning"
+      "Default": "Debug"
     }
   },
   "AllowedHosts": "*",
