--- a/UI/WebStore/appsettings.json
+++ b/UI/WebStore/appsettings.json
@@ -9,9 +9,9 @@
       "IncludeScopes": true,
       "LogLevel": {
 
-        "Microsoft.AspNetCore.Mvc.Razor.Internal": "Warning",
-        "Microsoft.AspNetCore.Mvc.Razor.Razor": "Debug",
-        "Microsoft.AspNetCore.Mvc.Razor": "Error",
+        //"Microsoft.AspNetCore.Mvc.Razor.Internal": "Warning",
+        //"Microsoft.AspNetCore.Mvc.Razor.Razor": "Debug",
+        //"Microsoft.AspNetCore.Mvc.Razor": "Error",
 
         "Microsoft": "Error",
         "System": "Error",
