--- a/UI/WebStore/appsettings.json
+++ b/UI/WebStore/appsettings.json
@@ -16,12 +16,22 @@
         "Microsoft": "Error",
         "System": "Error",
         "Default": "Information"
-      } 
-    
+      }
     },
     "LogLevel": {
       "Default": "Debug"
     }
+  },
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Debug",
+      "Override": {
+        "Microsoft": "Warning"
+      }
+    },
+    "WriteTo": [
+      { "Name": "Console" }
+    ]
   },
   "AllowedHosts": "*",
   "ClientAddress": "http://localhost:12213"
