--- a/Tests/WebStore.Tests/WebStore.Tests.csproj
+++ b/Tests/WebStore.Tests/WebStore.Tests.csproj
@@ -16,6 +16,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="RazorGenerator.Mvc" Version="2.4.9" />
     <PackageReference Include="xunit" Version="2.4.1" />
   </ItemGroup>
 
