Разбиение на страницы

--- a/UI/WebStore/appsettings.json
+++ b/UI/WebStore/appsettings.json
@@ -16,13 +16,14 @@
         "Microsoft": "Error",
         "System": "Error",
         "Default": "Information"
-      } 
-    
+      }
+
     },
     "LogLevel": {
       "Default": "Debug"
     }
   },
   "AllowedHosts": "*",
-  "ClientAddress": "http://localhost:12213"
+  "ClientAddress": "http://localhost:12213",
+  "PageSize": 3
 }
